--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 1. mkdir somename #创建工作目录
-2. cd somename && git init #Init 目录,生成.init目录即本地仓库
+2. cd somename && 
+   git init   #Init 目录,生成.init目录即本地仓库
 3. vi xx.file # 创建编辑文件
 4. git add * # 把该目录下的文件 或者修改过的文件 添加到.init本地仓库的index缓存区
 5. git commit -m "anntation of this modify of file"  #记录该目录下的文件的修改到本地仓库.init
